# ideology_engine

./: .gitignore  .markdownlint-cli2.yaml  FLYWHEEL_SETUP.md  README.md  demo.py  demo_kimi.py  demo_mbti.py  demo_mbti_fast.py  demo_mbti_optimized.py  pyproject.toml  run_api.py  test_parallel.py
.github/workflows/: automation-metrics.yml  ci-failure-auto-fix.yml  ci.yml  docs-auto-maintenance.yml  docs-ci.yml  flywheel-orchestrator.yml
src/assessment_engine/api/: __init__.py  app.py  errors.py  models.py
src/assessment_engine/api/routes/: protocols.py  sessions.py
src/assessment_engine/core/: contradiction.py  evidence.py  protocol.py  session.py  state.py
src/assessment_engine/engine/: assessment_engine.py  correlation_analyzer.py  follow_up_planner.py  optimized_parallel_engine.py  parallel_engine.py  probe_planner.py  state_updater.py  strategy_learner.py  termination_checker.py
src/assessment_engine/llm/: __init__.py  base.py  client.py  config.py  factory.py
src/assessment_engine/llm/prompts/: __init__.py  extract_evidence.py  generate_question.py  generate_report.py  parse_response.py
src/assessment_engine/llm/providers/: __init__.py  anthropic_client.py  openai_client.py
src/assessment_engine/storage/: protocol_repo.py  session_repo.py
tests/: test_preset_protocols.py
tests/api/: test_api.py
tests/core/: test_contradiction.py  test_evidence.py  test_protocol.py  test_session.py  test_state.py
tests/engine/: test_assessment_engine.py  test_correlation_analyzer.py  test_follow_up_planner.py  test_probe_planner.py  test_state_updater.py  test_strategy_learner.py  test_termination_checker.py
tests/llm/: test_client.py
tests/storage/: test_protocol_repo.py  test_session_repo.py
