[project]
name = "assessment-engine"
version = "0.1.0"
description = "A protocol-agnostic natural language assessment engine powered by Flywheel automation"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
# Flywheel automation - only supported on macOS (claude-agent-sdk limitation)
flywheel = [
    "claude-agent-sdk>=0.1.29; sys_platform == 'darwin'",
    "pygithub>=2.5.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    # Flywheel dev dependencies
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

# Ruff configuration (from Flywheel)
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "RUF001", # allow Chinese characters in strings
    "RUF002", # allow Chinese characters in docstrings
    "RUF003", # allow Chinese comments
    "RUF005", # allow list concatenation for clarity
    "SIM103", # prefer explicit return for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests
"scripts/**/*.py" = ["F841"]  # ignore unused variables in prompts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration (from Flywheel)
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]
